# awtter-fbx-exporter

./: .gitignore  README.md  pyproject.toml
awex/: __main__.py  main.py
awex/lib/: errors.py  sdaclient.py  utils.py
