[tool.poetry]
name = "awex"
version = "0.1.0"
description = "Get your Awtter assets without Unity"
authors = ["Alex <alex@tailbyte.org>"]
license = "MIT"
readme = "README.md"
packages = [{include = "awex"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
tarsafe = "^0.0.5"
typer = "^0.9.0"
requests = "^2.30.0"
textual = "^0.24.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
